# Aegis

./: .dockerignore  .env.example  .gitignore  CHECKPOINT.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.brain  README.md  docker-compose.yml  kanban_board.json  pyproject.toml  requirements.txt  run.bat
cloud/: README.md
dashboard/: app.py
deploy/: nginx.conf  sentry_init.py  setup-vps.sh
docs/: 1000_USERS_REPORT.md  API_SHOPPING_LIST.md  ARCHITECTURE_DIAGRAMS.md  COMPANY.md  COMPETITIVE_INTELLIGENCE.md  COMPETITOR_UX_BATTLE.md  GOOGLE_CLOUD_MEETING.md  GTM_PLAYBOOK.md  PRODUCT_STRATEGY.md  PROFI_QUESTIONS.md  PROFI_SPRINT11.md  QA_BACKEND_INTEGRATION.md  QA_DASHBOARD_FEATURES.md  QA_ENGAGEMENT_MECHANICS.md  QA_LANDING_AUTH.md  QA_MASTER_SUMMARY.md  QA_SECURITY_AUDIT.md  QA_SIGNAL_ACCURACY.md  REALTIME_DATA.md  REGULATORY.md  SENIOR_DEV_REVIEW.md  SPRINT_B_ARCHITECTURE.md  SPRINT_REVIEW_S14.md  STRATEGIC_NEEDS.md  STRATEGIC_PIVOT.md  STRATEGY.md  architecture_log.md  research_gold_001.md
landing/: index.html  pricing.html
memory/: bot_schedule.json  daily_reflections.json  error_lessons.json  hindsight_simulations.json  market_lessons.json  market_predictions.json  memory_manager.py  paper_portfolio.json  trade_decisions.json
src/: aegis_brain.py  agents.py  alert_manager.py  api_server.py  auth_manager.py  auto_trader.py  autonomous_manager.py  backtester.py  brain_entrypoint.py  brain_runner.py  chart_engine.py  chart_generator.py  chief_monitor.py  config.py  data_store.py  economic_calendar.py  fear_greed.py  fetch_data.py  fundamentals.py  i18n.py  (+29 more)
(+214 files in other folders)
